Alignment Correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,9 @@ a:focus {
   font-weight: 600;
   font-size: 14px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .bottom_button button svg {
   font-size: 25px;
@@ -465,7 +468,7 @@ a:focus {
   border-radius: 16px;
   padding: 20px;
   overflow-y: scroll;
-  height: 450px;
+  height: 380px;
 }
 .cashback_block {
   width: 100%;
@@ -688,7 +691,7 @@ a:focus {
   overflow-y: inherit;
 }
 .bottom_button button img {
-  margin-right: 20px;
+  margin-right: 15px;
 }
 .line {
   position: absolute;
